Login api's for swagger are modified
