# customer/routes/usersRoute.js
@@ -5,7 +5,7 @@ const auth = require('../../middleware/authentication');
 
 // router.post('/update-user',usersControllers.validateUserRegistration, usersControllers.createUser)
 router.post('/login', usersControllers.validateLoginProcess, usersControllers.loginUser)
-router.post('/user-login', usersControllers.validateLoginProcess, usersControllers.loginUserForSwagger)
+router.post('/merchant-login', usersControllers.validateLoginProcess, usersControllers.loginUserForSwagger)
 router.use(auth)
 
 /*
