# superAdmin/controllers/superAdminWebhooksController.js
@@ -1168,7 +1168,7 @@ exports.getAllWebhookTransactionsOfAccount = asyncWrapper(async (req, res) => {
 });
 
 
-exports.getAllWebhookPayoadHeadersOfAccount = asyncWrapper(async (req, res) => {
+exports.getAllWebhookPayoadHeadersOfAllAccounts = asyncWrapper(async (req, res) => {
   const { serialNumber } = req.query
   let matchCondition = {}
   let categories = ["cima-machine", "card-connect"]
@@ -1271,6 +1271,102 @@ exports.getAllWebhookPayoadHeadersOfAccount = asyncWrapper(async (req, res) => {
     }
   })
 })
+
+exports.getAllWebhookPayoadHeadersOfAllAccountsFn = async () => {
+
+  let matchCondition = {}
+  let categories = ["cima-machine", "card-connect"]
+
+  let merchantNames = await accountsModel.aggregate([
+    {
+      $match: {
+        status: "active",
+        //accountType: { $ne: "super-admin" },
+        accountName: {
+          $nin: ["", null],        // exclude empty string and null
+          $type: "string"          // ensure it's actually a string
+        }
+      }
+    },
+    {
+      $group: {
+        _id: "$accountName",
+        objectId: { $first: "$_id" }
+      }
+    },
+    {
+      $project: {
+        _id: 0,
+        merchantName: "$_id",
+        objectId: 1
+      }
+    }
+
+  ])
+
+  const webhookPayloadHeadersData = await webhookPayloadHeaders.aggregate([
+    // {
+    //   $match: {
+    //     ...matchCondition
+    //   }
+    // },
+    {
+      $addFields: {
+        userName: {
+          $cond: {
+            if: { $eq: ["$userName", ""] },  // check if empty string
+            then: "unknown",                  // replace with "unknown"
+            else: "$userName"
+          }
+        }
+      }
+    },
+    {
+      $facet: {
+        serialNumbers: [
+          { $group: { _id: null, serialNumbers: { $addToSet: "$serialNumber" } } },
+          { $project: { _id: 0, serialNumbers: 1 } }
+        ],
+        transactionTypes: [
+          { $group: { _id: null, transactionTypes: { $addToSet: "$transactionType" } } },
+          { $project: { _id: 0, transactionTypes: 1 } }
+        ],
+        userNamesOfMachine: [
+          {
+            $group: {
+              _id: "$serialNumber",
+              userNames: { $addToSet: "$userName" }
+            }
+          },
+          {
+            $project: {
+              _id: 0,
+              serialNumber: "$_id",
+              userNames: 1
+            }
+          }
+        ]
+      }
+    },
+    {
+      $project: {
+        serialNumbers: { $arrayElemAt: ["$serialNumbers.serialNumbers", 0] },
+        transactionTypes: { $arrayElemAt: ["$transactionTypes.transactionTypes", 0] },
+        // userNamesOfMachine: 1
+      }
+    }
+  ]);
+
+  let allMerchantCardConnectPayloadHeaders = await getAllCardConnectPayloadHeaders()
+
+
+  return {
+    categories,
+    merchantNames,
+    webhookPayloadHeadersData: webhookPayloadHeadersData?.[0] || {},
+    allMerchantCardConnectPayloadHeaders: allMerchantCardConnectPayloadHeaders
+  }
+}
 
 
 
