# swaggerDocumentationFiles/swagger.yaml
@@ -269,7 +269,7 @@ paths:
   /api/users/super-admin-login:
     post:
       tags:
-        - Authorize
+        - Authorize -  Super-admin only
       summary: "1. Copy access_token from response || 2. Click Authorize button   ||  3. Place access_token in input box to authorize."
       description: |
         - Accessible only for Super-admin
@@ -312,10 +312,10 @@ paths:
 
       security: [] # No authentication required for login
 
-  /api/merchants/users/user-login:
+  /api/merchants/users/merchant-login:
     post:
       tags:
-        - Authorize
+        - Authorize -  Merchant only
       summary: "1. Copy access_token from response || 2. Click Authorize button   ||  3. Place access_token in input box to authorize."
       description: |
         - For `Merchant's` login 
@@ -358,72 +358,6 @@ paths:
                   access_token: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VySWQiOiI2N2RkNTg2ZTZkNjJmYjhkN2FlMWU5NTIiLCJpYXQiOjE3NDQxNzMwNDcsImV4cCI6MTc0NDE3NjY0N30.jQe7XNYuDSkwB3HQNjO2tGfkmyd0aHFO6nMMzj-Mjcc"
 
       security: [] # No authentication required for login
-
-  #-----------------------------------------------------------------------------------------------------------------------------------
-
-  # /api/webhook/get-webhook-payload-headers/{accountId}:
-  #   get:
-  #     tags:
-  #       - API calls
-  #     summary: "Get details of serial numbers of machines registered under an account and transaction types of received transactions."
-  #     description: |
-  #       - This API provides a list of serial numbers of machines registered under a specific `accountId`.
-  #       - Additionally, it retrieves all transaction types associated with these machines that have been recorded through webhooks.
-  #       - Requires authentication via the `Authorization` header.
-  #     security:
-  #       - Authorization: [] # Requires Authorization header with token
-  #     parameters:
-  #       - name: accountId
-  #         in: path
-  #         required: true
-  #         schema:
-  #           type: string
-  #         description: "Unique identifier of the account for which webhooks are registered"
-  #     responses:
-  #       '200':
-  #         description: Webhook payload headers.
-  #         content:
-  #           application/json:
-  #             example:
-  #               status: "success"
-  #               message: "Webhook payload headers."
-  #               data:
-  #                 webhookPayloadHeadersData:
-  #                   serialNumbers:
-  #                     - "QA00579"
-  #                     - "QA00577"
-  #                     - "PA00581"
-  #                     - "QA00578"
-  #                     - "QA00580"
-  #                   transactionTypes:
-  #                     - "CashIn"
-  #                     - "DoorOpened"
-  #                 listOfWebhooks:
-  #                   - webhookSettings:
-  #                       periodType: "once each minute"
-  #                       currentStatus: "stop"
-  #                       interval: 10
-  #                       expiresOn: "2025-04-01T06:15:44.625Z"
-  #                     webhookMasterId: null
-  #                     _id: "67eb8490233046c701342349"
-  #                     webHookMasterId: "67eb8490233046c701342349"
-  #                     accountId: "67eb81cb45715d3e5b678ebb"
-  #                     userId: "67eb81cb45715d3e5b678ebd"
-  #                     location: "India"
-  #                     name: "Create work orders"
-  #                     webHookUrl: "https://api.dev.isyncrabbit.com/api/webhook/81794/67eb81cb45715d3e5b678ebb"
-  #                     authenticationCode: "31be5e06b50406b668fe7e591cf4560380df23535a81289c88f2e4d93625860e2213766324664aa05b34245520c2dde88f9a419ad218fc156c62193bae74c77b086e43b88fe498385ba38ec1c78ec15e6b1ec9f9c5fe27c6d533df865f48c2bcbf20be2d689f65b27fae5ee8b64930878f47d2da2585c1e87306c07ba1844202c8a87f7531dfe5d2ff8d70e6fed8aad8abb154c418a139082724411c2e3d6f71ef5b00f3e0a5002a357808df3d124e2c09a0111acc5934e42c77004409553cb1"
-  #                     primaryHookId: "SerialNumber"
-  #                     comments: null
-  #                     status: "active"
-  #                     lastPullDate: "2025-04-07T04:45:49.450Z"
-  #                     createdAt: "2025-04-01T06:15:44.643Z"
-  #                     updatedAt: "2025-04-07T04:45:49.450Z"
-  #                     __v: 0
-
-  #-----------------------------------------------------------------------------------------------------------------------------------
-
-  #-----------------------------------------------------------------------------------------------------------------------------------
 
   /api/machines/get-machine-transactions:
     get:
@@ -722,274 +656,3 @@ paths:
                           exceptionsCount:
                             type: integer
                             example: 0
-
-  /api/merchants/machines/get-machine-payload-headers/{accountId}:
-    get:
-      tags:
-        - Smart-filter transaction's dashboard
-      summary: "Retrieves details useful in smart filtered transactions' dashboard related to respective merchant's account."
-      description: |
-        - Specific to `Merchant` account only.
-        - This API takes `merchant's` accountId and considers the list of onboarded machines and card-connect integration details, if any.  
-        - Details retrieved here are meant to be useful to be used in `Smart filtered transaction's dashboard` in dropdowns.  
-        - Requires authentication via the `Authorization` header.  
-        - Returns `Payment-types`, `merchant details`, `list of machines onboarded`, `card-connect integration details`.
-      security:
-        - Authorization: [] # Requires Authorization header with token
-      parameters:
-        - name: accountId
-          in: path
-          required: true
-          schema:
-            type: string
-          description: "Unique account identifier"
-      responses:
-        200:
-          description: Merchant payload headers retrieved succesfully.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    example: success
-                  message:
-                    type: string
-                    example: "Merchant payload headers retrieved succesfully."
-                  data:
-                    type: object
-                    properties:
-                      categories:
-                        type: array
-                        items:
-                          type: string
-                        example: ["cima-machine", "card-connect"]
-                      merchantNames:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            merchantName:
-                              type: string
-                              example: "createaccounttest"
-                            objectId:
-                              type: string
-                              example: "68b6e54bcb20acc231225479"
-                  webhookPayloadHeadersData:
-                    type: object
-                    properties:
-                      serialNumbers:
-                        type: array
-                        items:
-                          type: string
-                        example: ["QA0131", "VV8069"]
-                      transactionTypes:
-                        type: array
-                        items:
-                          type: string
-                        example: ["CashIn"]
-                  merchantPayloadHeaders:
-                    type: object
-                    properties:
-                      transactionStatusKeys:
-                        type: array
-                        items:
-                          type: string
-                        example:
-                          [
-                            "Auth",
-                            "Captured",
-                            "Voided",
-                            "Failure",
-                            "Rejected",
-                            "Declined",
-                            "Settled",
-                            "Processed",
-                            "Unknown",
-                          ]
-                      transactionTypeKeys:
-                        type: array
-                        items:
-                          type: string
-                        example:
-                          [
-                            "ACCOUNT VERIFY",
-                            "AUTH REQUEST",
-                            "CASH ADVANCE",
-                            "REFUND",
-                            "SALE",
-                            "UNKNOWN",
-                            "VOID REFUND",
-                            "VOID SALE",
-                          ]
-                      customerDetails:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            cardBrand:
-                              type: string
-                              example: "visa"
-                            cardType:
-                              type: string
-                              example: "Credit"
-                            customerCardNumber:
-                              type: string
-                              example: "47XXXXXXXXXX1443"
-                      batches:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            batchId:
-                              type: integer
-                              example: 112
-
-  /api/machines/get-machine-payload-headers:
-    get:
-      tags:
-        - Smart-filter transaction's dashboard
-      summary: "Retrieves details useful in smart filtered transactions' dashboard related to respective merchant's account."
-      description: |
-        - Specific to `super-admin` account only.
-        - This API takes `merchant's` accountId and considers the list of onboarded machines and card-connect integration details, if any.  
-        - Details retrieved here are meant to be useful to be used in `Smart filtered transaction's dashboard` in dropdowns.  
-        - Requires authentication via the `Authorization` header.  
-        - Returns `Payment-types`, `merchant details`, `list of machines onboarded`, `card-connect integration details`.
-      security:
-        - Authorization: [] # Requires Authorization header with token
-
-      responses:
-        200:
-          description: Merchant payload headers retrieved succesfully.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: string
-                    example: success
-                  message:
-                    type: string
-                    example: "Merchant payload headers retrieved succesfully."
-                  data:
-                    type: object
-                    properties:
-                      categories:
-                        type: array
-                        items:
-                          type: string
-                        example: ["cima-machine", "card-connect"]
-                      merchantNames:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            merchantName:
-                              type: string
-                              example: "createaccounttest"
-                            objectId:
-                              type: string
-                              example: "68b6e54bcb20acc231225479"
-                  webhookPayloadHeadersData:
-                    type: object
-                    properties:
-                      serialNumbers:
-                        type: array
-                        items:
-                          type: string
-                        example:
-                          [
-                            "QA0157",
-                            "QA0283",
-                            "QA0222",
-                            "QA0154",
-                            "QA0017",
-                            "QA0129",
-                            "QA0083",
-                            "QA0054",
-                            "QA0110",
-                            "QA0267",
-                            "QA0214",
-                            "QA0201",
-                            "QA0287",
-                            "QA0145",
-                            "QA0097",
-                            "QA0280",
-                            "QA0049",
-                            "QA0061",
-                            "QA0012",
-                            "QA0012",
-                          ]
-                      transactionTypes:
-                        type: array
-                        items:
-                          type: string
-                        example:
-                          [
-                            "LockOpened",
-                            "DoorOpened",
-                            "DoorClosed",
-                            "LockClosed",
-                            "ManualCashTransaction",
-                            "CashIn",
-                            "DoorWhine",
-                          ]
-                  merchantPayloadHeaders:
-                    type: object
-                    properties:
-                      transactionStatusKeys:
-                        type: array
-                        items:
-                          type: string
-                        example:
-                          [
-                            "Auth",
-                            "Captured",
-                            "Voided",
-                            "Failure",
-                            "Rejected",
-                            "Declined",
-                            "Settled",
-                            "Processed",
-                            "Unknown",
-                          ]
-                      transactionTypeKeys:
-                        type: array
-                        items:
-                          type: string
-                        example:
-                          [
-                            "ACCOUNT VERIFY",
-                            "AUTH REQUEST",
-                            "CASH ADVANCE",
-                            "REFUND",
-                            "SALE",
-                            "UNKNOWN",
-                            "VOID REFUND",
-                            "VOID SALE",
-                          ]
-                      customerDetails:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            cardBrand:
-                              type: string
-                              example: "visa"
-                            cardType:
-                              type: string
-                              example: "Credit"
-                            customerCardNumber:
-                              type: string
-                              example: "47XXXXXXXXXX1443"
-                      batches:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            batchId:
-                              type: integer
-                              example: 112
